<resources>
    <string name="app_name">ChilliBook</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_stop">Stop</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Chilli controller</string>
    <string name="second_fragment_label">Your chilli stats</string>
    <string name="next">Next</string>
    <string name="connect">Connect</string>

    <string name="disconnect">Disconnect</string>

    <string name="hello_first_fragment"></string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ble_not_supported">Bluetooth  low energy not supported</string>
    <string name="ble_device_found">Chilli controller found!</string>
    <string name="ble_device_not_found">Chilli controller not found!</string>
    <string name="error_bluetooth_not_supported">Error Bluetooth not supported</string>
    <string name="content_description_main">Scanning screen to locate the Chilli BLE controller</string>
    <string name="scanning">Scanning...</string>
    <string name="not_scanning"></string>
    <string name="connected">Connected ESP32</string>
    <string name="disconnected">Disconnected ESP32</string>
    <string name="unknown_service">unknown service</string>
    <string name="unknown_characteristic">unknown characteristic</string>

    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="textview2_text">Controller:</string>

    <string name="default_temperature">%1$s [°F]</string>
    <string name="default_humidity">%1$s [%%]</string>
    <string name="default_empty"></string>
    <string name="button_clear">Clear</string>
    <string name="permissions">Permissions</string>

    textViewTemp
</resources>